# utcoupe_nextgen_asserv

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake
docs/diagrams/src/: run_states.plantuml  state_machine.plantuml
include/utcoupe/asserv/: tasks_dispatcher_like.concept.hpp
include/utcoupe/asserv/serial/: order.hpp  order_parser.hpp  parse_parameters.hpp  parse_task.hpp  parse_task.hxx  protocol.hpp  traits.hpp
include/utcoupe/asserv/utilities/: static_queue.hpp
test/: catch_main.cpp  ut_main.cpp
test/serial/: order_parser_tests.cpp  order_tests.cpp  parse_task_tests.cpp  parse_task_tests_catch.cpp
test/utilities/: static_queue_tests.cpp
